[package]
name = "sieve-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
slab = { version = "0.4.9", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon", "html_reports"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = "0.4.3"

[[bench]]
name = "bench"
harness = false
