[package]
name = "sieve-tree"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT OR Apache-2.0 OR Zlib"
categories = ["data-structures", "no-std"]
repository = "https://github.com/Ralith/sieve-tree"
readme = "README.md"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
slab = { version = "0.4.9", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon", "html_reports"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = "0.4.3"

[[bench]]
name = "bench"
harness = false

[features]
serde = ["dep:serde", "dep:serde-big-array", "slab/serde"]
